# edge-ai-cough-count

./: .dockerignore  .gitignore  CLAUDE.md  README.md  cough-detection-finetune.md  dataset_card_template.md  interactive-testing-documentation.md  model-training-documentation.md  pyproject.toml  requirements-hf.txt  requirements.txt
dataset-collector/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
dataset-collector/src/: App.tsx  types.ts
dataset-collector/src/components/: LabelingScreen.tsx  PermissionScreen.tsx  PredictionScreen.tsx  RecordingScreen.tsx  WaveformPlayer.tsx
dataset-collector/src/hooks/: useIMURecorder.ts
dataset-collector/src/utils/: buildZip.ts  formatTime.ts  imuToCsv.ts
notebooks/: Feature_Extraction.ipynb  Feature_Extraction_Thai_v1.ipynb  Interactive_Model_Testing.ipynb  Model_Training_XGBoost.ipynb
scripts/: generate_hf_dataset.py  upload_to_hf.py  verify_dataset.py
server/: Dockerfile  main.py
src/: dataset_gen.py  features.py  helpers.py  predict.py
web/: CLAUDE.md  drizzle.config.ts  package.json  pnpm-lock.yaml  vite.config.ts  wrangler.jsonc
web/app/: app.css  entry.client.tsx  root.tsx  types.ts
web/app/components/: EvaluationTimeline.tsx  LabelingScreen.tsx  PermissionScreen.tsx  PredictionScreen.tsx  RecordingScreen.tsx  WaveformPlayer.tsx
web/app/db/: schema.ts
web/app/hooks/: useAudioRecorder.ts  useTrackedRegions.ts
web/app/lib/: admin-auth.ts
web/app/routes/: _index.tsx  admin.$id.tsx  admin._index.tsx  admin.tsx  complete.tsx  evaluate.$id.tsx  predict.$id.tsx  r.$id.audio.tsx  r.$id.tsx  record.tsx  results.$id.audio.tsx  results.$id.tsx
web/app/utils/: audio.ts  buildZip.ts
(+9 files in other folders)
