[project]
name = "edge-ai-cough-count"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "gradio>=6.5.1",
    "imblearn>=0.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "shap>=0.49.1",
    "tqdm>=4.67.2",
    "uvicorn>=0.40.0",
    "xgboost==3.0.*",
]
